--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,4 @@
-client_id = "YOUR_GOOGLE_CLIENT_ID"
-client_secret = "YOUR_GOOGLE_CLIENT_SECRET"
-redirect_uri = "https://<your-username>-<your-app-name>.streamlit.app"
+client_id = "1059783446623-oqh17mfj7vh3dv7a4i751punsfupi3jd.apps.googleusercontent.com"
+client_secret = "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"
+redirect_uri = "http://localhost:8502"
+key = "AIzaSyADeeFE9rZGOtQsmQE3p05x7hfHbLQ85n8"
